MP10/grade.txt
Compilation Results:
********************
sparsemat.c: In function 'add_tuples':
sparsemat.c:121:11: warning: initialization from incompatible pointer type [enabled by default]
  int* t = matC;
           ^
sparsemat.c:128:13: warning: initialization makes integer from pointer without a cast [enabled by default]
  int temp = (*matA).tuples_head;
             ^
sparsemat.c:129:13: warning: initialization makes integer from pointer without a cast [enabled by default]
  int temc = (*matC).tuples_head;
             ^
sparsemat.c:130:6: error: invalid type argument of '->' (have 'int')
  temc->row = row;
      ^
sparsemat.c:130:14: error: 'row' undeclared (first use in this function)
  temc->row = row;
              ^
sparsemat.c:130:14: note: each undeclared identifier is reported only once for each function it appears in
sparsemat.c:131:6: error: invalid type argument of '->' (have 'int')
  temc->col = col;
      ^
sparsemat.c:131:14: error: 'col' undeclared (first use in this function)
  temc->col = col;
              ^
sparsemat.c:132:14: warning: comparison between pointer and integer [enabled by default]
  while (temp != NULL)
              ^
sparsemat.c:134:11: error: invalid type argument of '->' (have 'int')
   if (temp->value == 0)
           ^
sparsemat.c:138:17: error: invalid type argument of '->' (have 'int')
   int row = temp->row;
                 ^
sparsemat.c:139:17: error: invalid type argument of '->' (have 'int')
   int col = temp->col;
                 ^
sparsemat.c:140:19: error: invalid type argument of '->' (have 'int')
   int value = temp->value;
                   ^
sparsemat.c:141:7: error: invalid type argument of '->' (have 'int')
   temc->value = temp->value;
       ^
sparsemat.c:141:21: error: invalid type argument of '->' (have 'int')
   temc->value = temp->value;
                     ^
sparsemat.c:142:7: error: invalid type argument of '->' (have 'int')
   temc->row = row;
       ^
sparsemat.c:143:7: error: invalid type argument of '->' (have 'int')
   temc->col = col;
       ^
sparsemat.c:144:14: error: invalid type argument of '->' (have 'int')
   temp = temp->next;
              ^
sparsemat.c:145:14: error: invalid type argument of '->' (have 'int')
   temc = temc->next;
              ^
sparsemat.c:140:7: warning: unused variable 'value' [-Wunused-variable]
   int value = temp->value;
       ^
sparsemat.c:147:7: warning: assignment makes integer from pointer without a cast [enabled by default]
  temc = t;
       ^
sparsemat.c:148:7: warning: assignment makes integer from pointer without a cast [enabled by default]
  temp = (*matB).tuples_head;
       ^
sparsemat.c:149:14: warning: comparison between pointer and integer [enabled by default]
  while (temp != NULL)
              ^
sparsemat.c:151:11: error: invalid type argument of '->' (have 'int')
   if (temp->value == 0)
           ^
sparsemat.c:155:3: error: 'value' undeclared (first use in this function)
   value = temp->value;
   ^
sparsemat.c:155:15: error: invalid type argument of '->' (have 'int')
   value = temp->value;
               ^
sparsemat.c:156:11: error: invalid type argument of '->' (have 'int')
   if (temc->value != 0)
           ^
sparsemat.c:158:7: error: invalid type argument of '->' (have 'int')
   temc->value = value + temc->value;
       ^
sparsemat.c:158:29: error: invalid type argument of '->' (have 'int')
   temc->value = value + temc->value;
                             ^
sparsemat.c:162:7: error: invalid type argument of '->' (have 'int')
   temc->value = value;
       ^
sparsemat.c:164:14: error: invalid type argument of '->' (have 'int')
   temp = temp->next;
              ^
sparsemat.c:165:14: error: invalid type argument of '->' (have 'int')
   temc = temc->next;
              ^
sparsemat.c:167:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [sparsemat.o] Error 1

load_tuples test: 10 pts total

gv_tuples test: 5 pts total

set_tuples test: 35 pts total

add_tuples test: 10 pts total

mult_tuples test: 15 pts total

save_tuples test: 10 pts total

Printing diff of save tuples. If empty, 10 pts

0
destroy_tuples test: 5 pts total
Printing valgrind output. If no memory leaks/errors, 5 pts
valgrind: ./test0: No such file or directory

Grade:
******
Late submission: 0
Functionality: 0
Comments and Style: 0
Intro paragraph: 0
Total: 0
